--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,3 @@
-
 body{
     background-color: black;
     color: white;
@@ -10,6 +9,13 @@ body{
     animation-delay: 2s;
 }
 
+a:link{
+    color: white;
+}
+
+a:visited{
+    color: white;
+}
 
 .header{
     background-color: black;
@@ -25,6 +31,10 @@ body{
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
     animation-delay: 3.5s;
+}
+
+.subtext{
+    font-size: 25px;
 }
 
 /* Styling for welcome pop up on page load */
@@ -54,7 +64,7 @@ body{
 }
 
 .content{
-    margin: -4em .5em .5em .5em;
+    margin: -3em .5em .5em .5em;
     display: inline-block;
     opacity: 0;
     box-shadow: 10px 10px 5px grey;
@@ -66,9 +76,12 @@ body{
     animation-fill-mode: forwards;
 }
 
-.content img{
-    /* width: 100%;
-    height: 100%; */
+.textlead{
+    font-size: 40px;
+}
+
+.text{
+    font-size: 35px;
 }
 
 .overlay{
@@ -84,10 +97,7 @@ body{
     background-color: black
 }
 
-.content:hover .overlay {
-    opacity: .5;
-}
-
+/* Following is all for animation */
 
 @keyframes fadeInAnimation{
     0% {
